cabal-version:      3.0

name:               tsp-project
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Pavan-Aditya
maintainer:         pavanaditya1825@gmail.com
category:           Math
build-type:         Simple

extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable tsp-project
  main-is:             Main.hs
  other-modules:       GeneticAlgorithm
  hs-source-dirs:      app
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:
      base >= 4.7 && < 5,
      aeson >= 2.0,
      bytestring >= 0.11,
      scotty >= 0.12,
      wai-middleware-static >= 0.9,
      wai-extra >= 3.1,
      text >= 1.2,
      http-types >= 0.12,
      random >= 1.2,
      random-shuffle >= 0.0.4,
      parallel >= 3.2,
      deepseq >= 1.4,
      containers >= 0.6,
      transformers >= 0.5,
      time >= 1.12.2,
      clock >= 0.8,
      process >= 1.6
  default-language:    Haskell2010
