cabal-version:      3.0

name:               tsp-project
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Pavan-Aditya
maintainer:         pavanaditya1825@gmail.com
category:           Math
build-type:         Simple

extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable tsp-project
  main-is:             Main.hs
  hs-source-dirs:      app
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >= 4.7 && < 5,
      aeson >= 2.0,
      bytestring >= 0.11
  default-language:    Haskell2010
